# CPC-SNN-GW

./: .gitignore  .pre-commit-config.yaml  =1.18.0  BREAKTHROUGH_SUMMARY.md  CLEANUP_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  DIAGNOSIS_REPORT.md  FINAL_AUDIT_REPORT.txt  FIX_LEARNING_ISSUES.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  QWEN_CODE_FIREWORKS_SETUP.md  README.md  REFACTORING_VALIDATION.md  RUN_INSTRUCTIONS.md  SOLUTION_SUMMARY.md  STATUS_PROJEKTU.md  SYSTEM_VERIFICATION_CHECKLIST.md  __init__.py  _version.py  analyze_data.py  analyze_training_logs.py  architecture_and_mechanisms.md  baseline_comparisons.py  check_h5_structure.py  check_real_mlgwsc.py  cli.py  cli.py.backup  cli_analysis.md  cli_refactor.patch  compare_models_test.py  config.yaml  coverage.xml  cpc_snn_gw_scientific_paper.tex  data_cleanup_analysis.md  data_preprocessor_refactor.patch  debug_aresgw_style.py  debug_freeze_step_by_step.py  debug_gradient_flow.py  debug_simple_model.py  (+44 more)
.github/workflows/: candidate-regression-gate.yml  ci.yml
.hydra/: config.yaml  hydra.yaml
.serena/: project.yml
cli/: __init__.py  main.py
cli/commands/: __init__.py  evaluate.py  inference.py  train.py  train_backup.py
cli/parsers/: __init__.py  base.py
cli/runners/: __init__.py  enhanced.py  standard.py
cli/utils/: gpu_warmup.py
configs/: config.yaml  cpc.yaml  data_generation.yaml  dataset.yaml  default.yaml  enhanced_wandb_config.yaml  events.yaml  example_usage.py  final_framework_config.yaml  fixed_config.yaml  h100_optimized.yaml  lhc_optimized.yaml  mini_data.yaml  model.yaml  snn.yaml  train.yaml
configs/baselines/: baseline_lock_v1_full.json  baseline_lock_v1_full_mps.json  baseline_report_candidate.json  baseline_report_candidate.md
configs/decisions/: final_decision_candidate_v4_mps.json
configs/policy/: decision_policy_mps.json
data/: __init__.py  cache_manager.py  cache_manager_modular.py  cache_metadata.py  cache_storage.py  glitch_injector.py  gw_data_sources.py  gw_dataset_builder.py  gw_dataset_builder_modular.py  gw_download.py  gw_downloader.py  gw_physics_engine.py  gw_preprocessor.py  gw_signal_params.py  gw_specific_preprocessing.py  gw_synthetic_generator.py  label_analytics.py  label_correction.py  label_enums.py  label_utils.py  label_validation.py  mlgwsc1_data_loader.py  mlgwsc_data_loader.py  mlgwsc_dataset_loader.py  pycbc_integration.py  readligo_data_sources.py  readligo_downloader.py  real_ligo_integration.py
data/builders/: __init__.py  core.py  factory.py  testing.py
data/cache/: __init__.py  manager.py  operations.py
data/filtering/: __init__.py  unified.py
data/gwosc_cache/: GW150914_H1_32s.npy
data/preprocessing/: __init__.py  core.py  sampler.py  utils.py
data/signal_analysis/: __init__.py  snr_estimation.py  templates.py
docs/: baseline_freeze_runbook.md
documentation/: README.md  api-reference.md  architecture-overview.md  comparative-analysis.md  configuration-guide.md  experimental-results.md  index.md  installation-guide.md  neuromorphic-processing.md  performance-analysis.md  publication-materials.md  real-data-integration.md  reproducibility-guide.md  scientific-validation.md  troubleshooting.md  usage-examples.md
documentation/cli/: enhanced-cli.md  main-cli.md
documentation/data/: glitch-injection.md  gw-signal-processing.md
documentation/models/: cpc-encoder.md  snn-classifier.md  spike-bridge.md
documentation/pipelines/: advanced-pipeline.md
documentation/training/: cpc-loss.md  gradient-accumulation.md  test-evaluation.md  unified-trainer.md
documentation/utils/: data-split.md
evaluation/: real_metrics_evaluator.py
evaluation/modules/: __init__.py  confusion.py  evaluator.py  roc.py
examples/: hpo.py
interpolator_pickle/H1/: param_dict_list.pickle  partialSNR_dict_3.pickle
legacy/: README.md  simple_snn.py
memory-bank/: FIXES_REPORT_2025_01.md  REFACTORING_ACHIEVEMENT_2025_09.md  REFACTORING_PROGRESS.md  TRAINING_RESULTS_2025_09.md  activeContext.md  advanced_scientific_paper_prompt.md  memory_bank_instructions.md  next_run_checklist.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: __init__.py  cpc_components.py  cpc_encoder.py  cpc_losses.py  cpc_losses_backup.py  snn_classifier.py  snn_classifier_backup.py  snn_utils.py  spike_bridge.py
models/bridge/: __init__.py  core.py  (+5 more)
notebooks/: 01_Notebook_events_explorer.ipynb  02_Notebook_diagnosis_h5.ipynb  05_Anomaly_Detection_Inference.ipynb  06_Phase1_Training_Report.ipynb  Analysis_WandB.ipynb
outputs/: config.json  config.yaml
quick_hpo_results/: best_results.json  hpo_config.json  study.pkl  trials.csv
reports/: final_benchmark_table.md  final_decision.json
scripts/: bootstrap_compare_b_vs_c3ens.py  build_fast_verify_policy.py  check_baseline_regression.py  compare_b_vs_c3ens_ood.sh  create_baseline_lock.py  create_ood_splits.py  gate_and_promote_baseline.py  generate_baseline_report_v0.py  generate_ood_summary.py  generate_phase2_results_table.py  gw150914_analysis.py  mine_hard_negatives_v2.py  reproduce_phase2_abccalib.sh  reset_env.sh  run_c3_5seed_ensemble_ood.sh  run_ood_time_protocol.sh  smoke_entrypoints.sh  train_fixed.py  train_real_mlgwsc.py  train_with_fixes.py
src/: inference_anomaly.py
tests/: test_bridge_testing.py  test_calibration_smoke.py  test_cli_data_loader.py  test_cpc_blocks.py  test_dataset_smoke.py  test_metrics_smoke.py  test_model_smoke.py  test_tail_losses_smoke.py  test_training_step_smoke.py
training/: __init__.py  advanced_training.py  base_trainer.py  complete_enhanced_training.py  cpc_loss_fixes.py  enhanced_gw_training.py  gradient_accumulation.py  hpo_optimization.py  hpo_optuna.py  metrics.py  pipeline.py  pretrain_cpc.py  stages.py  test_evaluation.py  training_metrics.py  training_utils.py  unified_trainer.py  unified_training_loop.py
utils/: __init__.py  config.py  config_loader.py  data_split.py  device_auto_detection.py  enhanced_logger.py  jax_safety.py  performance_profiler.py  pycbc_baseline.py  wandb_enhanced_logger.py
wandb_archive/: latest-run
(+310 files in other folders)
