[project]
name = "cpc-snn-gw"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "black>=23.11.0",
    "flax>=0.10.6",
    "gwdatafind>=1.1.3",
    "gwosc>=0.8.1",
    "gwpy>=3.0.12",
    "isort>=5.12.0",
    "jax[cuda12]>=0.7.0",
    "jaxlib>=0.6.2",
    "matplotlib>=3.8.2",
    "mypy>=1.7.1",
    "numpy>=1.26.0",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.4.4",
    "plotly>=5.17.0",
    "pyfstat>=1.18.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "scipy>=1.11.4",
    "spyx>=0.1.20",
    "wandb>=0.16.1",
    "pyyaml>=6.0.2",
    "psutil>=7.0.0",
    "h5py>=3.14.0",
    "pycbc>=2.4.0",
]
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
