[project]
name = "cpc-snn-gravitationalwavesdetection"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gwpy==3.0.13",
    "gwsnr==0.3.7",
    "hydra-core==1.3.2",
    "ipywidgets>=8.1.8",
    "notebook>=7.4.7",
    "numpy==2.3.4",
    "plotly>=6.3.1",
    "pycbc==2.9.0",
    "pywavelets==1.9.0",
    "scikit-learn==1.7.2",
    "scipy-stubs==1.16.3.0",
    "seaborn>=0.13.2",
    "snntorch==0.9.4",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "wandb>=0.23.0",
]
